--- a/public/css/_custom.scss
+++ b/public/css/_custom.scss
@@ -15,3 +15,18 @@
 		margin-top: 10px;
 	}
 }
+.loading{
+	width: 200px;
+	height: 100px;
+	position: fixed;
+	top:50%;
+	left:50%;
+	margin-left:-100px;
+	margin-top: -50px;
+	background-color: aqua;
+	color: black;
+	display:flex;	
+	align-items: center;
+	justify-content: center;
+	
+}
