--- a/public/css/_custom.scss
+++ b/public/css/_custom.scss
@@ -33,3 +33,15 @@
 	justify-content: center;
 	
 }
+.spinner {
+	width: 100%;
+	height: 100%;
+	>div{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+}
+.covid19-title{
+	color: #f03;
+}
